fix error update blog in backend